app/assets/stylesheets/sass/_layout.scss
/**

	Layouts only

*/

html {
	background-color: $primary-color;
}

body {
	height: auto;
	background-color: $white
}

#main-nav {
	background-color: $white;
	width: 100%;
	display: block;
	font-size: 0.6667em;
	font-size: 2.4vw;
	overflow: hidden;
	height: 3.1em;

	p {
		display: none;
	}

	.buttons {
		display: block;
		width: 87%;
		height: 100%;
		//overflow: hidden;
		white-space: nowrap;
		float: right;
	}

	.button {
		width: 33.3%;
		height: 100%;
		margin: 0;
		float: left;

		&:hover {
			background-color: rgba($white, 0.85);
		}

		&.active {
			&:after {
				content: '';
				width: 0;
				height: 0;
				display: block;
				position: absolute;
				border-style: solid;
				border-width: 1em 1em 0 1em;
				border-color: #a0c700 transparent transparent transparent;
				left: 0;
				right: 0;
				margin: 0.15em auto 0;
				top: 100%;
				z-index: 1;
				border-width: 3vw 5vw 0 5vw;
			}
		}

		&.logo {
			background-color: transparent;
			width: 13%;
			border: 0;
			padding: 0;
			vertical-align: top;
			//overflow: hidden;
			height: 100%;
			float: left;

			.logo {
				width: auto;
				height: 2em;
				fill: $primary-color;
				position: absolute;
				left: 0;
				margin-top: 0.15em;
			}

			.logo-text {
				display: none;
				fill: $white;
			}

			&:hover {
				background-color: transparent;
				color: $black;
			}
		}
	}

	@include breakpoint(medium) {
		height: 5em;
		position: absolute;
		z-index: 10;
		//background-color: $white;
		background-color: rgba($white, 0.5);

		.has-banner-image & {
			background-color: transparent;
			@include background-image(linear-gradient(top, #000 0%, rgba(#000, 0) 100%));
		}

		.buttons {
			display: block;
			width: 70%;
			height: auto;
			//overflow: hidden;
			white-space: normal;
			font-size: 0.75em;
			margin-top: 2.5%;
		}

		p {
			font-size: 1.25em;
			font-size: 1.25vw;
			line-height: 1.2em;
		}
		
		.button {
			width: auto;
			height: auto;
			//float: none;
			//margin: 0 0 1.25rem;
			margin: 1%;
			width: 30%;

			&.logo {
				position: relative;
				//width: 100%;
				//height: auto;
				//margin-bottom: 2em;
				//float: none;
				width: 25%;
				margin: 0;
				height: 100%;
				float: left;
				padding: 0.25em;

				.logo {
					position: static;
					float: left;
					width: 51%;
					height: 100%;
					margin: 0 5% 0 0;
				}

				img.logo {
					height: auto;
				}

				.logo-text {
					display: block;
					width: 44%;
					height: 100%;
				}
			}
		}
	}

	@include breakpoint(large) {
		display: block;
		position: static;
		height: auto;
		min-height: 0;
		float: left;
		width: 25%;
		padding: 2.5%;
		font-size: 1em;

		.has-banner-image & {
			background-image: none;
		}

		.button, p {
			display: block;
		}

		.button {
			width: 100%;
			height: auto;
			margin: 0 0 1.25em;
			float: none;

			&.logo {
				width: 100%;
				height: auto;
				float: none;

				.logo-text {
					fill: $black;
				}
			}
		}

		.buttons {
			display: block;
			width: 100%;
			font-size: 1em;
			margin: 2em 0 0;
			float: none;
		}
	}
}

#side-bar {
	padding: 2.5%;

	.preview-list {

		li {
			margin: auto;
			float: none;
		}
	}

	h5 {
		text-align: center;
	}

	@include breakpoint(medium) {
		+ #content {
			padding-top: 0;
		}
	}

	@include breakpoint(large) {
		float: left;
		clear: left;
		width: 25%;
		font-size: 1vw;

		h5 {
			text-align: left;
			font-size: 1.25em;
		}

		+ #content {
			padding-top: 4em;
		}
	}
}

main {
	min-height: 100%;
	//overflow: auto;
	background-color: $white;

	@include breakpoint(large) {
		overflow: auto;

		footer {
			@include clearfix;
		}
	}
}

#content {
	padding: 1em;
	overflow: auto;
	//background-color: lighten($color-5, 20);
	background-color: $white;

	.organizations & {
		//background-color: lighten(desaturate($organization-color, 25), 50);
		min-height: 100vh;
	}

	.conferences & {
		//background-color: #FFF;
		//background-color: lighten(desaturate($conference-color, 25), 42.5);
		min-height: 100vh;
	}

	@include breakpoint(medium) {
		padding: 4em;
		clear: right;

		.organizations-show & {
			min-height: 25em;
			min-height: 50vh;
		}
	}
}
/* ... */

